--- a/SCANsat/CHANGELOG.txt
+++ b/SCANsat/CHANGELOG.txt
@@ -1,3 +1,11 @@
+Version 18.7 - 2018-7-27
+-----------------------
+
+- Update for KSP 1.4.5
+
+- Fix lat/long display coordinates
+
+
 Version 18.6 - 2018-4-30
 -----------------------
 
